<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeginningFragment">

    <LinearLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/greeting_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-1dp" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="363dp"
        android:layout_height="126dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/tv_welcome"
        android:textColor="@color/white"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="364dp"
        android:layout_height="145dp"
        android:fontFamily="@font/kurale"
        android:text="@string/tv_desc"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background_layout"
        app:layout_constraintStart_toStartOf="@+id/background_layout"
        app:layout_constraintTop_toTopOf="@+id/background_layout" />

    <TextView
        android:id="@id/tv_thanks"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/kurale"
        android:text="@string/tv_thanks"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bStart"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/b_begin"
        android:text="@string/b_start"
        android:textColor="@color/black"
        android:fontFamily="@font/kurale"
        app:layout_constraintBottom_toBottomOf="@+id/background_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_thanks"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>